fix(ui): realign text field

--- a/frontend/src/chat-container.css
+++ b/frontend/src/chat-container.css
@@ -3,32 +3,43 @@
 }
 
 #chat-container {
-    width: -webkit-fill-available;
     height: -webkit-fill-available;
-    flex-direction: column ;
+    width: -webkit-fill-available;
+    
     align-content: center ;
+    flex-direction: column ;
     justify-items: center ;
 }
 
 #user-entry {
+    min-height: 30px;
+    width: -webkit-fill-available ;
+
     position: absolute;
     bottom: 0;
-    
-    min-height: 30px;
+
     padding-bottom: 10px;
-    width: -webkit-fill-available ;
-    justify-content: center;
+    
+    align-items: flex-end;
     display: flex ;
-  flex-shrink: 0;
+    flex-shrink: 0;
+    justify-content: center;
 }
 
 #form-input {
+    max-height: 150px;
     width: 80%;
+
     margin-right: 20px;
-    max-height: 300px;
-    line-height: 1.5;
+    line-height: 15px;
+    padding: 7.5px;
+    height: 30px;
     
     box-sizing: border-box;    
-    resize: none;
     overflow-y: auto;
+    resize: none;
+}
+
+#form-submit {
+    height: 30px;
 }
